# sinkhorn

./: README.md  pyproject.toml  sinkhorn.ipynb
