[tool.poetry]
name = "sinkhorn"
version = "0.1.0"
description = ""
authors = ["Hirokazu Kiyomaru <h.kiyomaru@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.1"
cython = "^0.29.21"
POT = "^0.7.0"
jupyterlab = "^2.2.5"
matplotlib = "^3.3.1"
scipy = "^1.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
